# coursework-backend

./: Makefile  pyproject.toml  pyrightconfig.json
app/: config.py  database.py  main.py  repository.py
app/migrations/: env.py
app/migrations/versions/: 349e70448bf3_set_username_to_unique.py  7137d833bebf_create_users_table.py
app/user/: dependincies.py  model.py  repository.py  router.py  schemas.py  service.py  timedata.py
